[tool.poetry]
name = "py-web-hw05"
version = "0.1.0"
description = ""
authors = ["Maksym Melnyk <maks.melnyk.94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

aiohttp = "^3.9.1"
aiofile = "^3.8.8"
websockets = "^12.0"
names = "^0.3.0"
aiopath = "0.6.11"
black = {extras = ["d"], version = "^23.12.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
